// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. a single child element 1`] = `
<configweb__Base>
  <div>
    <responsiveweb__SliceContainer>
      <div>
        <responsiveweb__Base>
          <div>
            <responsiveweb__Base>
              <div>
                <div>
                  lead
                </div>
              </div>
            </responsiveweb__Base>
          </div>
        </responsiveweb__Base>
      </div>
    </responsiveweb__SliceContainer>
  </div>
</configweb__Base>
`;

exports[`2. two child elements 1`] = `
<configweb__Base>
  <div>
    <responsiveweb__SliceContainer>
      <div>
        <responsiveweb__Base>
          <div>
            <responsiveweb__Base>
              <div>
                <div>
                  lead
                </div>
              </div>
            </responsiveweb__Base>
            <responsiveweb>
              <div />
            </responsiveweb>
            <responsiveweb__SupportsContainer>
              <div>
                <responsiveweb>
                  <div>
                    <div>
                      support-1
                    </div>
                  </div>
                </responsiveweb>
              </div>
            </responsiveweb__SupportsContainer>
          </div>
        </responsiveweb__Base>
      </div>
    </responsiveweb__SliceContainer>
  </div>
</configweb__Base>
`;

exports[`3. three child elements 1`] = `
<configweb__Base>
  <div>
    <responsiveweb__SliceContainer>
      <div>
        <responsiveweb__Base>
          <div>
            <responsiveweb__Base>
              <div>
                <div>
                  lead
                </div>
              </div>
            </responsiveweb__Base>
            <responsiveweb>
              <div />
            </responsiveweb>
            <responsiveweb__SupportsContainer>
              <div>
                <responsiveweb>
                  <div>
                    <div>
                      support-1
                    </div>
                  </div>
                </responsiveweb>
                <responsiveweb>
                  <div>
                    <div>
                      support-2
                    </div>
                  </div>
                </responsiveweb>
              </div>
            </responsiveweb__SupportsContainer>
          </div>
        </responsiveweb__Base>
      </div>
    </responsiveweb__SliceContainer>
  </div>
</configweb__Base>
`;
